--- a/src/main/resources/templates/crearCuenta.html
+++ b/src/main/resources/templates/crearCuenta.html
@@ -20,7 +20,7 @@
   <div class="container col-12">
   	<nav th:replace="fragments/navbar :: navbar"></nav>
   	
-	<form class="formulario form-crear-cuenta col-11 col-sm-8 col-md-4" action="#" th:action="@{/crear-cuenta}" th:object="${dtoUsuario}" method="POST">
+	<form class="formulario form-crear-cuenta col-11 col-sm-8 col-md-4" th:action="@{/alumno/crear}" th:object="${dtoAlumno}" method="POST">
 	  <h1>Crear cuenta</h1>
 	  <div class="form-group">
 	  	<label for="nombre">Nombre</label>
@@ -40,6 +40,11 @@
                             th:value="${rol}"
                             th:utext="${rol}"/>
 	    </select>
+	  </div>
+	  <div class="form-group">
+	  	<label for="titulacion">Titulacion</label>
+		<input type="text" th:field="*{titulacion}" class="form-control" id="titulacion" />
+		<label th:if="${#fields.hasErrors('titulacion')}" th:errors="*{titulacion}" class="validation-message error"></label>
 	  </div>
 	  <div class="form-group">
 	  	<label for="email">Correo electrónico</label>
