--- a/src/main/resources/templates/misAsignaturas.html
+++ b/src/main/resources/templates/misAsignaturas.html
@@ -37,23 +37,25 @@
 	        </button>
 	      </div>
 	      <div class="modal-body">
-	        <form class="formulario form-crear-cuenta" id="insertar-asignatura" action="#" th:action="@{/asignatura/insertar}" th:object="${dtoAsignatura}" method="POST">
+	        <form class="formulario form-crear-cuenta" id="insertar-asignatura" th:action="@{/asignatura/insertar}" th:object="${dtoAsignatura}" method="POST">
 			  <div class="form-group">
 			  	<label for="nombre">Nombre</label>
-				<input type="text" th:field="*{nombre}" class="form-control" id="nombre"/>
+				<input type="text" th:field="*{nombre}" class="form-control"/>
 				<label th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" class="validation-message error"></label>
 			  </div>
 			  <div class="form-group">
 			  	<label for="grupo">Grupo</label>
-				<input type="text" th:field="*{grupo}" class="form-control" id="grupo" />
+				<input type="text" th:field="*{grupo}" class="form-control"/>
 				<label th:if="${#fields.hasErrors('grupo')}" th:errors="*{grupo}" class="validation-message error"></label>
-			  </div>
-			  
-			   <div class="form-group">
+			  </div>			  
+			  <div class="form-group">
 			  	<label for="curso">Curso</label>
-			  	<input type="text" th:field="*{curso}" class="form-control" id="curso"/>
+			  	<input type="text" th:field="*{curso}" class="form-control"/>
 			  	<label th:if="${#fields.hasErrors('curso')}" th:errors="*{curso}" class="validation-message error"></label>
-			  </div>  
+			  </div>
+			  <div class="form-group">
+			  	<input type="hidden" name="idProfesor" th:value="${usuario.id}" />
+			  </div>
 			</form>
 	      </div>
 	      <div class="modal-footer">
