--- a/src/main/resources/templates/crearCuenta.html
+++ b/src/main/resources/templates/crearCuenta.html
@@ -20,45 +20,55 @@
   <div class="container col-12">
   	<nav th:replace="fragments/navbar :: navbar"></nav>
   	
-	<form class="formulario form-crear-cuenta col-11 col-sm-8 col-md-4" th:action="@{/alumno/crear}" th:object="${dtoAlumno}" method="POST">
+	<form class="formulario form-crear-cuenta col-11 col-sm-8 col-md-4" th:action="@{/crear-cuenta}" th:object="${dtoUsuario}" method="POST">
 	  <h1>Crear cuenta</h1>
 	  <div class="form-group">
 	  	<label for="nombre">Nombre</label>
-		<input type="text" th:field="*{nombre}" class="form-control" id="nombre"/>
+		<input type="text" th:field="*{nombre}" class="form-control"/>
 		<label th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" class="validation-message error"></label>
 	  </div>
 	  <div class="form-group">
 	  	<label for="apellidos">Apellidos</label>
-		<input type="text" th:field="*{apellidos}" class="form-control" id="apellidos" />
+		<input type="text" th:field="*{apellidos}" class="form-control"/>
 		<label th:if="${#fields.hasErrors('apellidos')}" th:errors="*{apellidos}" class="validation-message error"></label>
-	  </div>
-	  
+	  </div>	  
 	  <div class="form-group">
 	    <label for="rol">Rol</label>
-	    <select class="form-control" id="rol" th:field="*{rol}">
-	      <option th:each="rol : ${roles}"
+	    <select class="form-control" th:field="*{rol}">
+	      <option th:each="rol : ${T(tfg.objetoNegocio.Rol).values()}"
                             th:value="${rol}"
-                            th:utext="${rol}"/>
+                            th:text="${rol}"/>
 	    </select>
 	  </div>
-	  <div class="form-group">
-	  	<label for="titulacion">Titulacion</label>
-		<input type="text" th:field="*{titulacion}" class="form-control" id="titulacion" />
-		<label th:if="${#fields.hasErrors('titulacion')}" th:errors="*{titulacion}" class="validation-message error"></label>
+	  <div class="atributosAlumno">
+		  <div class="form-group">
+		  	<label for="titulacion">Titulacion</label>
+			<input type="text" name="titulacion" class="form-control"/>
+		  </div>
+	  </div>
+	  <div class="atributosProfesor">
+		  <div class="form-group">
+		  	<label for="departamento">Departamento</label>
+			<input type="text" name="departamento" class="form-control"/>
+		  </div>
+		  <div class="form-group">
+		  	<label for="despacho">Despacho</label>
+			<input type="number" name="despacho" value=0 class="form-control"/>
+		  </div>
 	  </div>
 	  <div class="form-group">
 	  	<label for="email">Correo electrónico</label>
-	  	<input type="email" th:field="*{email}" class="form-control" id="email"/>
+	  	<input type="email" th:field="*{email}" class="form-control"/>
 	  	<label th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="validation-message error"></label>
 	  </div>
 	  <div class="form-group">
 	  	<label for="password">Contraseña</label>
-	  	<input type="password" th:field="*{password}" class="form-control" id="password"/>
+	  	<input type="password" th:field="*{password}" class="form-control"/>
 	  	<label th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="validation-message error"></label>
 	  </div>
 	  <div class="form-group">
 	  	<label for="confirmarPassword">Confirmar contraseña</label>
-	  	<input type="password" th:field="*{confirmarPassword}" class="form-control" id="confirmarPassword"/>
+	  	<input type="password" th:field="*{confirmarPassword}" class="form-control"/>
 	  </div>
 
       <div class="text-right">
@@ -70,11 +80,13 @@
 	  </div>  
 	</form>
 	
-	<!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="//code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>    
+  	
+  	<!-- Optional JavaScript -->
+	<script src="js/eventoCrearCuenta.js"></script>  
   </div>
   </body>
 </html>
