saGamificacion creado. Metodo crear usuario saGamificacion. Metodo obtener progreso de alumno saGamificacion.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -158,3 +158,16 @@ i{
 .alert>button>span{
 	color: #FFFFFF;
 }
+
+i.insignia-Platino{
+	color: #80D8FF;
+}
+i.insignia-Oro{
+	color: #FFC400;
+}
+i.insignia-Plata{
+	color: #B0BEC5;
+}
+i.insignia-Bronce{
+	color: #FF6E40;
+}
