--- a/src/main/resources/templates/fragments/tablas.html
+++ b/src/main/resources/templates/fragments/tablas.html
@@ -121,9 +121,9 @@
 	  	<table class="table table-striped table-dark" th:fragment="tablaAlumnos">
 		  <thead>
 		    <tr>
-		      <th scope="col">Apellidos</th>
 		      <th scope="col">Nombre</th>
 		      <th scope="col">Correo electrónico</th>
+		      <th scope="col">Insignias</th>
 		      <th scope="col" th:if="${usuario.rol == T(tfg.objetoNegocio.Rol).Profesor}">Acciones</th>
 		    </tr>
 		  </thead>
@@ -133,10 +133,10 @@
 		    </tr>
 		  </tbody>
 		  <tbody th:if="${not #lists.isEmpty(alumnosMatriculados)}">
-		    <tr th:each="alumno : ${alumnosMatriculados}">
-		      <td scope="row" th:text="${alumno.apellidos}"></td>
-		      <td th:text="${alumno.nombre}"></td>
+		    <tr th:each="alumno, indexAlumno : ${alumnosMatriculados}">
+		      <td scope="row" th:text="${alumno.nombre} + ' ' + ${alumno.apellidos}"></td>
 		      <td th:text="${alumno.email}"></td>
+		      <td><i th:each="insignia : *{listaInsignias[__${indexAlumno.index}__]}" th:class="'material-icons insignia-' + ${insignia.categoria}" th:title="${insignia.nombre}">stars</i></td>
 		      <td th:if="${usuario.rol == T(tfg.objetoNegocio.Rol).Profesor}">
 		      	<form class="formulario-oculto" th:action="@{/asignatura/baja-alumno}" method="POST">
 					<input type="hidden" name="idAsignatura" th:value="${asignatura.id}" />
