Aplicado motor de gamificacion. Aplicado parseador de JSON. Añadido parseador de Excel. Relación N a M en Alumno-Asignatura refactorizada con id en la relación. Vistas refactorizadas. Modals encapsulados.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -62,7 +62,8 @@ div.card-deck{
 
 .jumbotron{
 	margin: 5%;
-	opacity: 0.93;
+	background: #FFFFFF;
+	border-radius: 0px;
 }
 
 .alert{
@@ -103,10 +104,6 @@ div.tabla{
 	background: #212529;
 	color: #FF8F00;
 	text-align: center;	
-}
-
-td:last-child, thead th:last-child{
-	text-align: center;
 }
 
 table a{
