--- a/src/main/resources/templates/crearCuenta.html
+++ b/src/main/resources/templates/crearCuenta.html
@@ -24,12 +24,12 @@
 	  <h1>Crear cuenta</h1>
 	  <div class="form-group">
 	  	<label for="nombre">Nombre</label>
-		<input type="text" th:field="*{nombre}" class="form-control"/>
+		<input type="text" th:field="*{nombre}" class="form-control" required/>
 		<label th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" class="validation-message error"></label>
 	  </div>
 	  <div class="form-group">
 	  	<label for="apellidos">Apellidos</label>
-		<input type="text" th:field="*{apellidos}" class="form-control"/>
+		<input type="text" th:field="*{apellidos}" class="form-control"  required/>
 		<label th:if="${#fields.hasErrors('apellidos')}" th:errors="*{apellidos}" class="validation-message error"></label>
 	  </div>	  
 	  <div class="form-group">
@@ -58,17 +58,17 @@
 	  </div>
 	  <div class="form-group">
 	  	<label for="email">Correo electrónico</label>
-	  	<input type="email" th:field="*{email}" class="form-control"/>
+	  	<input type="email" th:field="*{email}" class="form-control" required/>
 	  	<label th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="validation-message error"></label>
 	  </div>
 	  <div class="form-group">
 	  	<label for="password">Contraseña</label>
-	  	<input type="password" th:field="*{password}" class="form-control"/>
+	  	<input type="password" th:field="*{password}" class="form-control" required/>
 	  	<label th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="validation-message error"></label>
 	  </div>
 	  <div class="form-group">
 	  	<label for="confirmarPassword">Confirmar contraseña</label>
-	  	<input type="password" th:field="*{confirmarPassword}" class="form-control"/>
+	  	<input type="password" th:field="*{confirmarPassword}" class="form-control" required/>
 	  </div>
 
       <div class="text-right">
