Integración con Aplicación de Retos al añadir reto y al guardarlo.

--- a/bin/src/main/resources/templates/fragments/tablas.html
+++ b/bin/src/main/resources/templates/fragments/tablas.html
@@ -106,9 +106,9 @@
 			    <td></td>
 			    <td class="text-center">
 					<!-- Button trigger modal -->
-					<a type="button" class="btn btn-naranja" th:href="${'http://localhost:8000/?idAsignatura=' + asignatura.id}">
+					<button type="button" class="btn btn-naranja" data-toggle="modal" data-target="#modalNuevoReto">
 						Añadir Reto
-					</a>
+					</button>
 				</td>
 		    </tr>
 		  </tfoot>
