Integración con Quiz.

--- a/src/main/resources/templates/fragments/tablas.html
+++ b/src/main/resources/templates/fragments/tablas.html
@@ -72,7 +72,7 @@
 		    <tr>
 		      <th scope="col">Id</th>
 		      <th scope="col">Nombre</th>
-		      <th scope="col">Enlace</th>
+		      <th scope="col" th:if="${usuario.rol == T(tfg.objetoNegocio.Rol).Alumno}">Enlace</th>
 		      <th scope="col" class="text-center" th:if="${usuario.rol == T(tfg.objetoNegocio.Rol).Profesor}">Acciones</th>
 		    </tr>
 		  </thead>
@@ -85,10 +85,11 @@
 		    <tr th:each="reto : ${retos}" th:if="${usuario.rol == T(tfg.objetoNegocio.Rol).Alumno and reto.disponible or usuario.rol == T(tfg.objetoNegocio.Rol).Profesor}">
 		      <td scope="row" th:text="${reto.id}"></td>
 		      <td th:text="${reto.nombre}"></td>
-		      <td>
+		      <td th:if="${usuario.rol == T(tfg.objetoNegocio.Rol).Alumno}">
 		      	<a th:href="${reto.enlace}">Iniciar reto</a>
 		      </td>
 		      <td class="text-center" th:if="${usuario.rol == T(tfg.objetoNegocio.Rol).Profesor}">
+		      	<a th:href="|http://localhost:8000/reto/${reto.id}|" title="Modificar Reto"><i class="material-icons icono-verde">create</i></a>
 		      	<form class="formulario-oculto" th:action="@{/asignatura/eliminar-reto}" method="POST">
 					<input type="hidden" name="idAsignatura" th:value="${asignatura.id}" />
 					<input type="hidden" name="idReto" th:value="${reto.id}" />
@@ -103,7 +104,6 @@
 		      <td colspan="1" class="text-right" th:text="' Departamento: ' + ${asignatura.profesor.departamento}  + '. Despacho: ' + ${asignatura.profesor.despacho}"></td>
 		    </tr>
 		    <tr th:if="${usuario.rol == T(tfg.objetoNegocio.Rol).Profesor}">
-			    <td></td>
 			    <td></td>
 			    <td></td>
 			    <td class="text-center">
